--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pre-commit = "^2.20.0"
 flake8 = "^5.0.4"
 isort = "^5.10.1"
 interrogate = "^1.5.0"
+snakeviz = "^2.1.1"
+pyinstrument = "^4.3.0"
 
 
 [build-system]
